fix alignment

--- a/style.css
+++ b/style.css
@@ -42,20 +42,23 @@ a:hover {
 }
 
 .code-landing, .code-work {
-  height: 800px;
+  min-height: 100vh;
   width: 100%;
   background: url('images/code.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  position: absolute;
-  opacity: .12;
   z-index: -1;
+  background-blend-mode: screen;
+  background-color: #cfcfcf;
 }
 /*===========================
 Landing Page
 ===========================*/
 
+.name {
+  padding-top: 60px;
+}
 .code-landing {
   margin-top: -40px;
 }
@@ -180,16 +183,13 @@ Work
 
 #portfolio {
   margin-top: 300px;
+  padding-top: 60px;
 }
 
 .work-container {
   display: flex;
   justify-content: space-around;
   margin-top: 50px;
-}
-
-.code-work {
-  margin-top: 285px;
 }
 
 .work-links {
